# Pharmacy-Manager

./: .gitignore  CMakeLists.txt  README.md  pharmacy_orders.txt  pharmacy_products.txt
.github/workflows/: c-cpp.yml
docs/: TESTING.md  backlog.md  class-diagram.md  iteration-2-plan.md  iteration-2.md  iteration-3.md  sequence-diagram.md  test-matrix.md  test-strategy.md  vision.md
src/: main.cpp
src/Application/: BookingService.cpp  BookingService.h  DiscountService.cpp  DiscountService.h  InventoryService.cpp  InventoryService.h  OrderDtos.h  OrderService.cpp  OrderService.h  PharmacyController.h  ReportService.cpp  ReportService.h
src/Calculations/: BookingCalculation.h  SaleFactory.h
src/Console/: BookingManager.cpp  BookingManager.h  BookingService.cpp  BookingService.h  ConsoleUIHelper.cpp  ConsoleUIHelper.h  InventoryManager.cpp  InventoryManager.h  InventoryService.cpp  InventoryService.h  OrderManager.cpp  OrderManager.h  OrderService.cpp  OrderService.h  PharmacyConsole.cpp  PharmacyConsole.h
src/Domain/: Booking.h  BookingRepository.h  BookingStatus.h  Order.h  OrderItem.h  OrderRepository.h  OrderStatus.h  Product.h  ProductRepository.h  RepositoryPattern.h  Return.h  ReturnRepository.h  SaleFactory.h  StrategyPattern.h
src/Infrastructure/: FileBookingRepository.cpp  FileBookingRepository.h  FileInventoryRepository.cpp  FileInventoryRepository.h  FileOrderRepository.cpp  FileOrderRepository.h  FileProductRepository.cpp  FileProductRepository.h  FileStorageHelper.cpp  FileStorageHelper.h  OrderDeserializer.cpp  OrderDeserializer.h  OrderSerializer.cpp  OrderSerializer.h  ProductDeserializer.cpp  ProductDeserializer.h  ProductSerializer.cpp  ProductSerializer.h
tests/: BusinessLogicTests.cpp  Lab35Tests.cpp  PharmacyTests.cpp  test_business_logic.cpp  test_e2e.cpp  test_edge_cases.cpp  test_error_cases.cpp
